<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
    >

<!-- The main content view -->
<FrameLayout
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/AppTheme">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"/>
    </android.support.v7.widget.Toolbar>

    <!-- The main content view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ronda1"
            android:textSize="22sp"
            android:id="@+id/ronda"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:padding="10sp"
            android:background="@color/dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objetivo"
            android:textSize="22sp"
            android:id="@+id/objetivo"
            android:layout_below="@id/ronda"
            android:gravity="center"
            android:paddingTop="20sp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reparte"
            android:textSize="22sp"
            android:id="@+id/reparte"
            android:layout_below="@id/objetivo"
            android:gravity="center"
            android:paddingTop="5sp"
            android:paddingBottom="10sp"
            />

        <ScrollView
            android:id="@+id/mainplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:layout_below="@+id/reparte"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:isScrollContainer="false"
            android:scrollbarThumbVertical="@android:color/white"
            android:fadeScrollbars="false"
            android:scrollbarSize="4dp"
            android:layout_above="@+id/next_button3"
            >
        </ScrollView>


        <Button
            android:id="@+id/next_button3"
            android:layout_width="match_parent"
            android:text="@string/siguiente"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_height="62dp"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/dark"
            android:background="@color/white"
            />

    </RelativeLayout>


</FrameLayout>

<!-- The navigation drawer -->
<RelativeLayout
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:id="@+id/drawerPane"
    android:layout_gravity="start"
    android:layout_marginTop="?attr/actionBarSize"
    >


    <!-- List of Actions (pages) -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:background="#ffffffff"
        />

</RelativeLayout>
</android.support.v4.widget.DrawerLayout>
