<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nmarin.eite.com.continentalplus.About"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/AppTheme">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"/>
    </android.support.v7.widget.Toolbar>


    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/aboutDiseño"-->
        <!--android:textSize="30sp"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:textColor="@color/dark"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:id="@+id/textView2" />-->

    <Button
        android:id="@+id/buttonEmail"
        android:layout_width="match_parent"
        android:text="@string/email"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="62dp"
        android:textSize="24sp"
        android:gravity="center"/>


    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="match_parent"
        android:text="@string/volverApp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/mainAbout"
        android:layout_height="62dp"
        android:textSize="24sp"
        android:gravity="center"/>

</android.widget.RelativeLayout>
