<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    >

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:focusable="true"
        >


        <android.support.v7.widget.Toolbar
            android:id="@+id/my_awesome_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:backgroundTint="?attr/colorPrimary"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:theme="@style/ToolbarColoredBackArrow"
            app:popupTheme="@style/AppTheme">
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:layout_centerHorizontal="true"/>
        </android.support.v7.widget.Toolbar>

        <!-- The main content view -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"


            >

            <TextView
                android:layout_width="match_parent"
                android:padding="20sp"
                android:layout_height="wrap_content"
                android:text="@string/njugadores"
                android:textSize="24sp"
                android:id="@+id/textView"
                android:layout_marginTop="80dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
              />

            <ScrollView
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbars="vertical"
                android:layout_below="@+id/textView"
                android:layout_above="@+id/next_button2"
                android:gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:background="#00ffffff"
                android:layout_centerHorizontal="true"
                android:fadeScrollbars="false"
                android:scrollbarSize="4dp"
                android:layout_marginBottom="?attr/actionBarSize"
                android:isScrollContainer="false"
                android:scrollbarThumbVertical="@android:color/white"

                >

                <LinearLayout
                    android:id="@+id/mainLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    />
            </ScrollView>

            <Button
                android:id="@+id/next_button2"
                android:layout_width="match_parent"
                android:text="@string/siguiente"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_height="62dp"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/dark"
                android:background="#ebebeb"
                />

        </RelativeLayout>


    </FrameLayout>

    <!-- The navigation drawer -->
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerPane"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"
        >


        <!-- List of Actions (pages) -->
        <ListView
            android:id="@+id/navList"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:background="#ffffffff"
            />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
